@@ -451,7 +451,7 @@ namespace mln
 
     template <typename A, typename I, typename W>
     inline
-		 mln_ch_value(I, mln_meta_accu_result(A, mln_value(I)))
+    mln_ch_value(I, mln_meta_accu_result(A, mln_value(I)))
     transform_snake(const Meta_Accumulator<A>& a,
 		    const Image<I>& input, const Window<W>& win)
     {
