@@ -47,9 +47,9 @@ namespace mln
 
 
 
-  /*------------------------.
+  /*---------------------.
   | p_graph_piter<S,I>.  |
-  `------------------------*/
+  `---------------------*/
 
   /*!
     \internal
