@@ -1,3 +1,11 @@
+2010-11-29  Roland Levillain  <roland@lrde.epita.fr>
+
+	Clean up white space.
+
+	* mln/core/site_set/p_graph_piter.hh,
+	* mln/accu/transform_snake.hh:
+	Here.
+
 2010-10-19  Roland Levillain  <roland@lrde.epita.fr>
 
 	Typos and aesthetic changes in Milena apps.
